# ABSESpy

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  404.html  CHANGELOG.md  CHANGELOG.rst  Fire spread model.md  LICENSE  README.md  README.zh-cn.md  RoadMap.md  Wolf Sheep Predation Model.md  abbreviations.md  contributing.md  index.html  index.md  makefile  mkdocs.yml  objects.inv  pyproject.toml  refs.bib  release-please-config.json  remove-logs.sh  requirements.txt  setup.py  tags.json  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  draft-pdf.yml  gh-page.yml  release-please.yml  release.yml
.obsidian/: .gitignore  .pre-commit-config.yaml  README.md  app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  hotkeys.json  pyproject.toml
.obsidian/plugins/OA-file-hider/: data.json
.obsidian/plugins/better-fn/: styles.css
.obsidian/plugins/cm-chs-patch/: manifest.json
.obsidian/plugins/homepage/: data.json  styles.css
.obsidian/plugins/obsidian-admonition/: data.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  styles.css
.obsidian/plugins/obsidian-kanban/: data.json
.obsidian/plugins/obsidian-pandoc-reference-list/: data.json  main.js  styles.css
.obsidian/plugins/obsidian-projects/: data.json  main.js  manifest.json
.obsidian/plugins/obsidian-tasks-plugin/: data.json  main.js
.obsidian/plugins/periodic-notes/: data.json  main.js
.obsidian/plugins/quickadd/: data.json  main.js  manifest.json
.obsidian/plugins/table-editor-obsidian/: main.js  manifest.json
.obsidian/plugins/tasks-calendar-wrapper/: data.json  main.js  manifest.json  styles.css
.obsidian/plugins/workspaces-plus/: appearance.json.bak  data.json  main.js  workspaces.json.bak
.obsidian/src/: updates.py
.obsidian/templates/: readme.md
.obsidian/tests/: test_plugins.py
.obsidian/themes/Things/: theme.css
LICENSES/: AGENTPY_LICENSE  NUMPY_LICENSE  PYTHON_LICENSE  XARRAY_LICENSE
abses/: __init__.py  actor.py  agent_list.py  agents.py  base_nature.py  bases.py  boundary.py  cells.py  components.py  container.py  data.py  datacollection.py  decision.py  dynamic.py  engine.py  errors.py  evolution.py  experiment.py  factory.py  geo.py  graph.py  human.py  job_manager.py  links.py  log.py  logging.py  main.py  mediator.py  modules.py  move.py  nature.py  objects.py  patch.py  project.py  random.py  selection.py  sequences.py  states.py  time.py  variable.py
abses/_bases/: base_container.py  bases.py  components.py  datacollector.py  dynamic.py  logging.py  modules.py  objects.py  states.py
abses/algorithms/: learn.py  spatial.py
abses/conf/: default.yaml
abses/exp/: experiment.py
abses/tools/: func.py  read_files.py  regex.py  viz.py
abses/viz/: customize_marker.py  solara.py  viz_actors.py  viz_model.py  viz_nature.py
api/agents/: index.html
api/api/: api.md  index.html
api/cells/: cells.md  index.html
api/container/: index.html
api/decisions/: index.html
api/experiment/: index.html
api/human/: human.md  index.html
api/layer/: index.html  layer.md
api/links/: index.html  links.md
api/model/: index.html  model.md
api/move/: index.html  move.md
api/nature/: index.html  nature.md
api/random/: index.html
api/sequences/: index.html
api/time/: index.html  time.md
api/variables/: index.html
config/: log.yaml  patch_vars.yaml  testing.yaml  water_quota.yaml  world.yaml
data/: farmland.tif  irr_lands.csv
docs/: index.md  materials.md  navigation.md  refs.bib
docs/api/: agent.md  agents.md  api.md  boundary.md  cells.md  container.md  decisions.md  experiment.md  human.md  model.md  nature.md  objects.md  patch.md  random.md  sequences.md  structures.md  time.md  variables.md
docs/contribution/: contribution.md  suggestions.md
docs/docs/: about.md  acknowledge.md  background.md  contribution.md  dependencies.md  design.md  features.md  install.md  license.md  roadmap.md  usage.md  user_guide.md
docs/drafts/: Checking `mypy` strictly and static types..md  Parallel operation (maybe `dask`) 1.md  Parallel operation (maybe `dask`).md  better log control.md  use `dataclass` or `pydantic` rather than dictionaries.md
docs/examples/: community.md  gallery.md  groundwater.md  negotiation.md  official.md  variable.ipynb  yr_sim.md
docs/features/: MoHuB.md  architectural_elegance.md  features.md  time_control.md
docs/home/: Installation.md  acknowledge.md  audience.md  comtributing.md  contributing.md  contribution.md  dependencies.md  features.md  get_started.md  guide_checklist.md  install.md  license.md
docs/logs/: v-0.0.1.md  v-0.0.2.md
docs/notebooks/: CCR_example.ipynb  actors.ipynb  experiment.ipynb  geodata.ipynb  parameters.ipynb  variable.ipynb  workflow.ipynb
docs/paper/: paper.md
docs/plugins/: checks.py
docs/templates/: doc template.md
docs/tutorial/: tutorial.md  tutorial_guide_from_ABM.md  tutorial_guide_from_SES.md  user_guide.md
docs/wiki/: about.md  background.md  definition_ABM.md  how_modeling.md  paper.md  why_unique.md  wiki.md
examples/community/: index.html
examples/exploratory/: getting-started.ipynb
examples/fire_spread/: config.yaml  model.py
hydra_plugins/: abses_searchpath_plugin.py
includes/: abbreviations.md
notebooks/: test_raster_and_agents.ipynb
search/: search_index.json
template/: changelog_template.md
tests/: conftest.py  create_tested_instances.py  fixtures.py  helper.py  test_actor.py  test_agent.py  test_cells.py  test_components.py  test_config.yaml  test_container.py  test_creator.py  test_data.py  test_datacollection.py  test_dynamic.py  test_fire.py  test_framework.py  test_geo.py  test_human.py  test_involution.py  test_links.py  test_main.py  test_model_wealth.py  test_modules.py  test_move.py  test_nature.py  test_notification.py  test_objects.py  test_patches.py  test_random.py  test_sequence.py  test_sheep_wolf.py  test_states.py  test_steps.py  test_time.py  test_tools.py  test_variable.py  test_water_quota.py  water_quota_fixtures.py
(+157 files in other folders)
