[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
tag_format = "$version"
[semantic_release]
version_variable = 3.8 # or where your version is defined
# repository_user_var = TWINE_USERNAME
# repository_pass_var = TWINE_PASSWORD

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "abses"
version = "0.2.0.alpha"
description = "ABSESpy makes it easier to build artificial Social-ecological systems with real GeoSpatial datasets and fully incorporate human behaviour."
authors = ["Shuang Song <songshgeo@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
prettytable = "^3.6.0"
pint = "^0.20.1"
netcdf4 = "^1.6.2"
hydra-core = "^1.3.2"
mesa-geo = "^0.5.0"
xarray = "^2023.8.0"
fiona = "^1.9.4.post1"

[tool.poetry.group.dev.dependencies]
pytest-clarity = "^1.0.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
xarray = "^2023.1.0"
rioxarray = "^0.13.3"
geopandas = "^0.12.2"
pre-commit = "^3.0.1"
scriv = "^1.2.0"
pytest = "^7.2.1"
sourcery = "^1.0.6"
allure-pytest = "^2.13.2"
pytest-sugar = "^0.9.7"
ipykernel = "^6.25.1"
jupyterlab = "^4.0.5"
jupyterlab-execute-time = "^3.0.1"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: project.toml: tool.poetry.version"
format = "md"
