[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
tag_format = "$version"
[semantic_release]
version_variable = 3.8 # or where your version is defined
# repository_user_var = TWINE_USERNAME
# repository_pass_var = TWINE_PASSWORD

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "abses"
version = "0.6.6"
description = "ABSESpy makes it easier to build artificial Social-ecological systems with real GeoSpatial datasets and fully incorporate human behaviour."
authors = ["Shuang Song <songshgeo@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"
include = [
  "icons/fa-regular-400.otf",
  "abses/conf/**/*.yaml",
  "abses/conf/*.py",
  "data/*",
  "hydra_plugins.abses_searchpath_plugin"
]

[tool.poetry.plugins."hydra.searchpath"]
abses = "hydra_plugins.abses_searchpath_plugin:ABSESpySearchPathPlugin"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
netcdf4 = ">=1.6"
hydra-core = "~1.3"
mesa-geo = ">=0.6"
xarray = ">=2023"
fiona = ">1.8"
loguru = ">=0.7"
rioxarray = ">=0.13"
pendulum = "~2"
geopandas = "~0"
typing-extensions = "~4"
fontawesome = ">=5"
seaborn = ">=0.13"
geocube = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest-clarity = "^1.0.1"
pre-commit = "^3.0.1"
scriv = "^1.2.0"
pytest = "^7.2.1"
sourcery = "^1.0.6"
allure-pytest = "^2.13.2"
pytest-sugar = "^0.9.7"
ipykernel = "^6.25.1"
jupyterlab = "^4.0.5"
jupyterlab-execute-time = "^3.0.1"
matplotlib = "^3.7.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
nbstripout = "^0.6.2"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"
interrogate = "^1.5.0"
mypy = "^1.6.1"
bandit = "^1.7.5"
black = "^23.9.1"
pylint = "^3.0.1"
tox = "^4.11.3"
lxml = "^5.2.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-bibtex = "^2.11.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-jupyter = "^0.24.5"
mkdocs-callouts = "^1.9.1"
mkdocs-glightbox = "^0.3.4"
mike = "^2.0.0"
mkdocs-exclude = "^1.0.2"
mkdocs-simple-hooks = "^0.1.5"
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["misc", "override"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true
